<resources>
    <string name="app_name">DataMahasiswa</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="DftrKntk">Daftar Kontak</string>

    <string name="Add_New">Tambah Data</string>
    <string name="edit">Edit Mahasiswa</string>
    <string name="delete">Delete Mahasiswa</string>
    <string name="title_activity_display_contact">Data Mahasiswa</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Alamat</string>
    <string name="email">Email</string>
    <string name="tmbhData">Tambah Data</string>

    <string name="nim">No Mhs</string>
    <string name="save">Simpan</string>
    <string name="deleteContact">Yakin...ingin menghapus ini.</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="db">Data</string>
    <string name="ti">Mahasiswa TI</string>

    <string name="msk_name">Masukkan Nama</string>
    <string name="msk_nomor">Masukkan Nomor Telepon</string>
    <string name="msk_email">Masukkan Email</string>
    <string name="msk_alamat">Masukkan Alamat</string>
    <string name="titikdua"> : </string>
    <string name="profil">Profil</string>
</resources>
