<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilDisplay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/profil"
            android:textSize="25dp"
            android:textStyle="bold">

        </TextView>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp">

            <TableRow
                android:paddingBottom="15dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:width="110dp"
                    android:text="@string/name" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titikdua" />

                <TextView
                    android:id="@+id/ednamea"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/msk_name"
                    >

                </TextView>

            </TableRow>

            <TableRow
                android:paddingBottom="15dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:width="110dp"
                    android:text="@string/phone" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titikdua" />

                <TextView
                    android:id="@+id/edphonea"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/msk_nomor"

                    >

                </TextView>

            </TableRow>

            <TableRow
                android:paddingBottom="15dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:width="110dp"
                    android:text="@string/email" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titikdua" />

                <TextView
                    android:id="@+id/edemaila"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/msk_email"
                    >

                </TextView>

            </TableRow>

            <TableRow
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:width="110dp"
                    android:text="@string/address" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titikdua" />

                <TextView
                    android:id="@+id/edaddressa"
                    android:layout_width="270dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/msk_alamat"
                 >

                </TextView>

            </TableRow>
        </TableLayout>

<!--        <Button-->
<!--            android:id="@+id/save"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:onClick="run"-->
<!--            android:text="@string/save">-->

<!--        </Button>-->
    </LinearLayout>
</RelativeLayout>